[package]
name = "irsdk"
version = "1.0.0"
edition = "2025"
description = "iRacing SDK"
license = "MIT"
repository = ""

[dependencies]
memmap2 = "0.9.0"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
windows-rs = { version = "0.48", features = ["Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Memory"] }

[lib]
name = "irsdk"
path = "src/lib.rs"
